Made confirmation text readable, prevented error box from overlapping Reset button, refactored API call to helper pattern

--- a/src/_scss/pages/login.scss
+++ b/src/_scss/pages/login.scss
@@ -109,6 +109,11 @@
             padding: 0;
             color: $color-white;
             font-size: $small-font-size;
+
+            p {
+                color: $color-white;
+                font-size: $small-font-size;
+            }
         }
     }
     .usa-da-input-container {
